--- a/styles/gluo.less
+++ b/styles/gluo.less
@@ -3,8 +3,8 @@
 //====================================================
 
 // Default
-@sidebar: #313042;
-@accent: #F18260;
+@sidebar: #333333;
+@accent: #2eb525;
 
 // Luna
 // @sidebar: #202C46;
@@ -141,7 +141,7 @@
 
 // Compose button icon color
 .sheet-toolbar .btn.btn-toolbar.item-compose img.content-mask {
-  background-color: @sidebar-text;
+  background-color: @accent;
 }
 
 //====================================================
@@ -153,7 +153,7 @@
   font-size: 10px;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: fade(@sidebar-text, 50%);
+  color: fade(@accent, 50%);
   margin-bottom: 10px;
   padding: 0;
 }
@@ -181,7 +181,7 @@
   max-height: 6px;
   transform: none;
   background-image: none;
-  background-color: @sidebar-text;
+  background-color: @accent;
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="6" viewBox="0 0 10 6"><path fill="#FFF" d="M0 0h1l4 4 4-4h1v1L5 6 0 1z"/></svg>');
 }
@@ -196,7 +196,7 @@
 
 .account-sidebar .item.selected {
   background: transparent;
-  color: @active-sidebar-text;
+  color: @accent;
 }
 
 // Item expansion icon wrapper
@@ -226,7 +226,7 @@
 }
 
 .account-sidebar .item.selected img.content-mask {
-  background-color: @active-sidebar-text;
+  background-color: fade(@accent, 50%);
 }
 
 .nylas-outline-view .item-container.dropping {
@@ -339,7 +339,7 @@
 .list-container .list-item.focused,
 .list-container .list-item.selected,
 .thread-list.handler-split .list-item.selected {
-  background: tint(@accent, 90%);
+  background: @accent;
   color: @active-thread-text;
 }
 
